# loghound

./: .gitattributes  Cargo.toml  README.md  README.txt  loghound.toml  package.bat
.github/workflows/: ci.yml
scripts/: install.bat  package.ps1  run-hidden.vbs  uninstall.bat
src/: cli.rs  config.rs  filter.rs  logger.rs  main.rs  model.rs  process.rs  service.rs
src/capture/: dbwin.rs  decode.rs  mod.rs
