[package]
name = "loghound"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["clock"] }
tracing-appender = "0.2"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",        # CreateFileMappingW / MapViewOfFile
    "Win32_System_Threading",     # CreateEventW / WaitForSingleObject / SetEvent / OpenProcess
    "Win32_Security",             # SECURITY_ATTRIBUTES
    "Win32_Globalization",        # MultiByteToWideChar (CP_ACP 解码)
    "Win32_System_ProcessStatus", # 进程名查询
    "Win32_System_Console",       # SetConsoleCtrlHandler
]
